@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics </artifactId>
+            <artifactId>javafx-graphics</artifactId>
             <version>12</version>
             <classifier>win</classifier>
         </dependency>
@@ -59,12 +59,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.19</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx -->
-        <!--        <dependency>-->
-        <!--            <groupId>de.jensd</groupId>-->
-        <!--            <artifactId>fontawesomefx</artifactId>-->
-        <!--            <version>8.9</version>-->
-        <!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.9</version>
+        </dependency>
         <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-fontawesome</artifactId>
@@ -107,12 +107,6 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
-        <dependency>
-            <groupId>com.jfoenix</groupId>
-            <artifactId>jfoenix</artifactId>
-            <version>9.0.1</version>
-        </dependency>
 
     </dependencies>
     <build>
@@ -121,31 +115,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>default-compile</id>-->
-<!--                        <configuration>-->
-<!--                            &lt;!&ndash; compile everything to ensure module-info contains right entries &ndash;&gt;-->
-<!--                            &lt;!&ndash; required when JAVA_HOME is JDK 8 or below &ndash;&gt;-->
-<!--                            <jdkToolchain>-->
-<!--                                <version>11</version>-->
-<!--                            </jdkToolchain>-->
-<!--                            <release>11</release>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>base-compile</id>-->
-<!--                        <goals>-->
-<!--                            <goal>compile</goal>-->
-<!--                        </goals>-->
-<!--                        &lt;!&ndash; recompile everything for target VM except the module-info.java &ndash;&gt;-->
-<!--                        <configuration>-->
-<!--                            <excludes>-->
-<!--                                <exclude>module-info.java</exclude>-->
-<!--                            </excludes>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
                 <configuration>
                     <!-- jdkToolchain required when JAVA_HOME is JDK 9 or above -->
                     <jdkToolchain>
@@ -176,6 +145,32 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                    </options>
                     <mainClass>org.fpt.App</mainClass>
                 </configuration>
             </plugin>
